// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";


// The `quota` template represents an item for which to check quota.
// 
// Example config:
// 
// ```yaml
// apiVersion: "config.istio.io/v1alpha2"
// kind: instance
// metadata:
//   name: requestcount
//   namespace: istio-system
// spec:
//   compiledTemplate: quota
//   params:
//     dimensions:
//       source: source.name | "unknown"
//       sourceVersion: source.labels["version"] | "unknown"
//       destination: destination.labels["app"] | destination.service.host | "unknown"
//       destinationVersion: destination.labels["version"] | "unknown"
// ```
//
// The `quota` template represents a piece of data to check Quota for.
// 
// When writing the configuration, the value for the fields associated with this template can either be a
// literal or an [expression](https://istio.io/docs/reference//config/policy-and-telemetry/expression-language/). Please note that if the datatype of a field is not istio.policy.v1beta1.Value,
// then the expression's [inferred type](https://istio.io/docs/reference//config/policy-and-telemetry/expression-language/#type-checking) must match the datatype of the field.
package quota;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/quota.proto";
import "policy/v1beta1/value_type.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_QUOTA;
option (istio.mixer.adapter.model.v1beta1.template_name) = "quota";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleQuotaService is implemented by backends that wants to handle request-time 'quota' instances.
service HandleQuotaService {
    // HandleQuota is called by Mixer at request-time to deliver 'quota' instances to the backend.
    rpc HandleQuota(HandleQuotaRequest) returns (istio.mixer.adapter.model.v1beta1.QuotaResult);
    
}

// Request message for HandleQuota method.
message HandleQuotaRequest {

    // 'quota' instance.
    InstanceMsg instance = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;

    // Expresses the quota allocation request.
    istio.mixer.adapter.model.v1beta1.QuotaRequest quota_request = 4;
}





// Contains instance payload for 'quota' template. This is passed to infrastructure backends during request-time
// through HandleQuotaService.HandleQuota.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    // The unique identity of the particular quota to manipulate.
    map<string, istio.policy.v1beta1.Value> dimensions = 1;
    
}

// Contains inferred type information about specific instance of 'quota' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
    // The unique identity of the particular quota to manipulate.
    map<string, istio.policy.v1beta1.ValueType> dimensions = 1;
    
}


// Represents instance configuration schema for 'quota' template.
message InstanceParam {
    
    // The unique identity of the particular quota to manipulate.
    map<string, string> dimensions = 1;
    
}

